--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -6,6 +6,8 @@ runs:
   using: composite
   steps:
     - uses: myparcelnl/actions/yarn-install@v3
+      with:
+        node-version: 18
 
     - name: 'Build packages'
       shell: bash
