--- a/.github/workflows/deploy-demo.yml
+++ b/.github/workflows/deploy-demo.yml
@@ -11,32 +11,21 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build:
-    name: 'Create build'
+  deploy:
+    runs-on: ubuntu-22.04
+    permissions:
+      pages: write
+      id-token: write
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-22.04
     steps:
-      - uses: myparcelnl/actions/setup-git-credentials@v3
-        id: credentials
-        with:
-          app-id: ${{ secrets.MYPARCEL_APP_ID }}
-          private-key: ${{ secrets.MYPARCEL_APP_PRIVATE_KEY }}
-
       - uses: actions/checkout@v3
-        with:
-          token: ${{ steps.credentials.outputs.token }}
 
       - uses: actions/configure-pages@v2
-        with:
-          token: ${{ steps.credentials.outputs.token }}
 
       - uses: actions/upload-pages-artifact@v1
         with:
           path: ./apps/demo/dist
 
-      - id: deployment
-        uses: actions/deploy-pages@v1
-        with:
-          token: ${{ steps.credentials.outputs.token }}
+      - uses: actions/deploy-pages@v1
