build: use dist instead of lib everywhere

--- a/apps/vue-form-builder/package.json
+++ b/apps/vue-form-builder/package.json
@@ -11,14 +11,14 @@
   "license": "MIT",
   "type": "module",
   "exports": {
-    ".": "./lib/index.js",
+    ".": "./dist/index.js",
     "./src": "./src/index.ts"
   },
-  "main": "./lib/index.js",
-  "types": "./lib/index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "files": [
-    "lib",
-    "src"
+    "./dist",
+    "./src"
   ],
   "scripts": {
     "build": "run ws:tsup:build \"$(pwd)\"",
