--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -26,8 +26,8 @@
   },
   "dependencies": {
     "@myparcel-vfb/build-vite": "workspace:*",
-    "@myparcel-vfb/hook-manager": "workspace:^1.0.0-alpha.18",
-    "@myparcel-vfb/utils": "workspace:^1.0.0-alpha.17",
+    "@myparcel-vfb/hook-manager": "workspace:*",
+    "@myparcel-vfb/utils": "workspace:*",
     "@myparcel/ts-utils": "^1.6.0"
   },
   "devDependencies": {
@@ -37,7 +37,7 @@
     "happy-dom": "^8.7.1",
     "typescript": "^4.9.5",
     "vite": "^4.1.4",
-    "vite-plugin-dts": "1.7.3",
+    "vite-plugin-dts": "^2.1.0",
     "vitest": "^0.28.5",
     "vue": "^3.2.47",
     "vue-tsc": "^1.1.5"
