--- a/libs/plugin/package.json
+++ b/libs/plugin/package.json
@@ -21,7 +21,7 @@
     "watch": "run ws:tsup:watch \"$(pwd)\""
   },
   "dependencies": {
-    "@myparcel-vfb/core": "workspace:^1.0.0-alpha.21",
+    "@myparcel-vfb/core": "workspace:*",
     "@myparcel/ts-utils": "^1.6.0",
     "@vue/devtools-api": "^6.5.0"
   },
