--- a/package.json
+++ b/package.json
@@ -70,6 +70,12 @@
     "typescript": "^4.9.5"
   },
   "packageManager": "yarn@3.4.1",
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "volta": {
+    "node": "16.19.1"
+  },
   "bundlewatch": {
     "ci": {
       "trackBranches": [
