--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -63,6 +63,24 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_REPO_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
+  rebase-prs:
+    needs: release
+    if: always()
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: myparcelnl/actions/setup-git-credentials@v3
+        id: credentials
+        with:
+          app-id: ${{ secrets.MYPARCEL_APP_ID }}
+          private-key: ${{ secrets.MYPARCEL_APP_PRIVATE_KEY }}
+
+      - uses: peter-evans/rebase@v2
+        with:
+          token: ${{ steps.credentials.outputs.token }}
+          base: ${{ github.ref_name }}
+          exclude-drafts: true
+          exclude-labels: 'dependencies'
+
   deploy:
     needs: release
     runs-on: ubuntu-22.04
