--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -31,16 +31,20 @@ jobs:
     runs-on: ubuntu-22.04
     needs: test
     steps:
-      - uses: myparcelnl/actions/setup-git-credentials@v3
-        id: credentials
+      - uses: actions/checkout@v3
         with:
-          app-id: ${{ secrets.MYPARCEL_APP_ID }}
-          private-key: ${{ secrets.MYPARCEL_APP_PRIVATE_KEY }}
+          persist-credentials: false
+          token: ${{ secrets.GH_REPO_TOKEN }}
+
+      # TODO: Switch to v3 with app credentials when GitHub apps are allowed to bypass status checks. https://github.com/orgs/community/discussions/43460
+      - uses: myparcelnl/actions/setup-git-credentials@v2
+        with:
+          token: ${{ secrets.GH_REPO_TOKEN }}
 
       - uses: actions/checkout@v3
         with:
-          token: ${{ steps.credentials.outputs.token }}
           fetch-depth: 0
+          token: ${{ secrets.GH_REPO_TOKEN }}
 
       - uses: ./.github/actions/setup
 
@@ -58,7 +62,6 @@ jobs:
             --config-file monodeploy.config.cjs \
             --log-level 0
         env:
-          # TODO: Switch to app token when GitHub apps are allowed to bypass status checks. https://github.com/orgs/community/discussions/43460
           GH_TOKEN: ${{ secrets.GH_REPO_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
