--- a/apps/vue-form-builder/package.json
+++ b/apps/vue-form-builder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@myparcel/vue-form-builder",
-  "version": "1.0.0-alpha.47",
+  "version": "1.0.0-beta.0",
   "keywords": [
     "vue",
     "form-builder",
@@ -29,10 +29,10 @@
     "watch": "run ws:tsup:watch \"$(pwd)\""
   },
   "dependencies": {
-    "@myparcel-vfb/core": "workspace:^1.0.0-alpha.25",
-    "@myparcel-vfb/hook-manager": "workspace:^1.0.0-alpha.19",
-    "@myparcel-vfb/plugin": "workspace:^1.0.0-alpha.25",
-    "@myparcel-vfb/utils": "workspace:^1.0.0-alpha.17",
+    "@myparcel-vfb/core": "workspace:^1.0.0-beta.0",
+    "@myparcel-vfb/hook-manager": "workspace:^1.0.0-beta.0",
+    "@myparcel-vfb/plugin": "workspace:^1.0.0-beta.0",
+    "@myparcel-vfb/utils": "workspace:^1.0.0-beta.0",
     "@myparcel/ts-utils": "^1.6.0"
   },
   "devDependencies": {
