--- a/libs/hook-manager/package.json
+++ b/libs/hook-manager/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@myparcel-vfb/hook-manager",
-  "version": "1.0.0-alpha.19",
+  "version": "1.0.0-beta.0",
   "license": "MIT",
   "type": "module",
   "exports": {
