--- a/libs/utils/package.json
+++ b/libs/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@myparcel-vfb/utils",
-  "version": "1.0.0-alpha.17",
+  "version": "1.0.0-beta.0",
   "license": "MIT",
   "type": "module",
   "exports": {
