--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@myparcel-vfb/monorepo",
-  "version": "1.0.0-alpha.0",
+  "version": "1.0.0",
   "private": true,
-  "repository": "github:myparcelnl/vue-form-builder",
+  "repository": "myparcelnl/vue-form-builder",
   "type": "module",
   "workspaces": [
     "libs/**",
