--- a/libs/utils/package.json
+++ b/libs/utils/package.json
@@ -3,29 +3,23 @@
   "version": "1.0.0-beta.2",
   "license": "MIT",
   "type": "module",
-  "exports": {
-    ".": "./dist/index.js",
-    "./src": "./src/index.ts"
-  },
-  "main": "./dist/index.js",
+  "exports": "./src/index.ts",
   "types": "./dist/index.d.ts",
   "files": [
     "./dist",
     "./src"
   ],
   "scripts": {
-    "build": "run ws:tsup:build \"$(pwd)\"",
-    "build:dev": "run ws:tsup:build:dev \"$(pwd)\"",
+    "build": "run ws:ts:build \"$(pwd)\"",
+    "build:dev": "run ws:ts:build:dev \"$(pwd)\"",
     "clean": "run ws:clean \"$(pwd)\"",
-    "typecheck": "run ws:tsup:typecheck \"$(pwd)\"",
-    "watch": "run ws:tsup:watch \"$(pwd)\""
+    "typecheck": "run ws:ts:typecheck \"$(pwd)\""
   },
   "dependencies": {
     "@myparcel/ts-utils": "^1.6.0"
   },
   "devDependencies": {
-    "@myparcel-vfb/build-tsup": "workspace:*",
-    "tsup": "^6.6.3"
+    "typescript": "^5.0.0"
   },
   "publishConfig": {
     "access": "public"
