--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -18,17 +18,7 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
-
-      - uses: myparcelnl/actions/yarn-install@v3
-        with:
-          node-version: 18
-
-      - name: 'Run tests'
-        run: |
-          yarn nx run-many \
-            --target=test:run \
-            --parallel=false \
-            --output-style=static
+      - uses: ./.github/actions/test
 
   build:
     runs-on: ubuntu-22.04
