--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -16,15 +16,7 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
-
-      - uses: ./.github/actions/setup
-
-      - name: 'Run tests'
-        run: |
-          yarn nx run-many \
-            --target=test:run \
-            --parallel=false \
-            --output-style=static
+      - uses: ./.github/actions/test
 
   release:
     name: 'Publish new release 🚀'
