build: add test:coverage scripts

--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -13,6 +13,7 @@
     "build": "run ws:vue:build \"$(pwd)\"",
     "clean": "run ws:clean \"$(pwd)\"",
     "test": "run ws:test \"$(pwd)\"",
+    "test:coverage": "run ws:test:coverage \"$(pwd)\"",
     "test:run": "run ws:test:run \"$(pwd)\"",
     "typecheck": "run ws:vue:typecheck \"$(pwd)\""
   },
