--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@tsconfig/recommended": "^1.0.2",
     "@types/node": "^18.14.0",
     "@vue/tsconfig": "^0.1.3",
+    "array.prototype.flatmap": "^1.3.1",
     "bundlewatch": "^0.3.3",
     "conventional-changelog-conventionalcommits": "^5.0.0",
     "eslint": "^8.34.0",
