--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "package.json": "npx sort-package-json"
   },
   "prettier": "@myparcel/prettier-config",
+  "resolutions": {
+    "eslint-plugin-prettier": "^4.0.0"
+  },
   "dependencies": {
     "@nrwl/nx-cloud": "^16.0.5"
   },
