build(gha): update workflows

--- a/.github/actions/test/action.yml
+++ b/.github/actions/test/action.yml
@@ -12,6 +12,7 @@ runs:
 
     - name: 'Run tests'
       shell: bash
+      #language=sh
       run: |
         yarn nx run-many \
           --target=test:coverage \
