--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -11,6 +11,7 @@ runs:
 
     - name: 'Build packages'
       shell: bash
+      #language=sh
       run: |
         yarn nx run-many \
           --runner=cloud \
