--- a/apps/vue-form-builder-js/package.json
+++ b/apps/vue-form-builder-js/package.json
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
-    "@vitest/coverage-c8": "^0.28.5",
+    "@vitest/coverage-v8": "^0.34.5",
     "typescript": "^5.0.0",
     "vite": "^4.1.4",
     "vite-plugin-custom-tsconfig": "^1.0.4",
