--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -23,7 +23,7 @@
     "@myparcel/ts-utils": "^1.6.0"
   },
   "devDependencies": {
-    "@vitest/coverage-c8": "^0.28.5",
+    "@vitest/coverage-v8": "^0.34.5",
     "@vue/test-utils": "^2.3.0",
     "happy-dom": "^12.2.1",
     "typescript": "^5.0.0",
