build: use yarn 4 and node 20 (lts)

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,11 +1,11 @@
+compressionLevel: 0
+
+enableGlobalCache: false
+
 nodeLinker: node-modules
 
 npmRegistries:
   //registry.npmjs.org/:
     npmAuthToken: "${NPM_TOKEN:-invalid}"
 
-plugins:
-  - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
-    spec: "@yarnpkg/plugin-workspace-tools"
-
-yarnPath: .yarn/releases/yarn-3.6.0.cjs
+yarnPath: .yarn/releases/yarn-4.0.1.cjs
