--- a/apps/vue-form-builder/package.json
+++ b/apps/vue-form-builder/package.json
@@ -9,14 +9,30 @@
   ],
   "license": "MIT",
   "type": "module",
-  "exports": "./src/index.ts",
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
+      },
+      "require": {
+        "types": "./dist/index.cjs",
+        "default": "./dist/index.cjs"
+      }
+    },
+    "./ts": {
+      "types": "./dist/index.d.ts",
+      "import": "./src/index.ts"
+    }
+  },
   "types": "./dist/index.d.ts",
   "files": [
     "./dist",
     "./src"
   ],
   "scripts": {
-    "build": "run ws:ts:build \"$(pwd)\"",
+    "build": "vite build",
+    "build:dev": "vite build --mode development",
     "clean": "run ws:clean \"$(pwd)\"",
     "typecheck": "run ws:ts:typecheck \"$(pwd)\""
   },
@@ -28,7 +44,13 @@
     "@myparcel/ts-utils": "^1.6.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vitest/coverage-v8": "^0.34.5",
     "typescript": "^5.0.0",
+    "vite": "^4.1.4",
+    "vite-plugin-custom-tsconfig": "^1.0.4",
+    "vite-plugin-dts": "^2.1.0",
+    "vitest": "^0.34.3",
     "vue": "^3.2.47",
     "vue-tsc": "^1.6.5"
   },
