--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,53 +1,43 @@
-name: 'Release 🚀'
+name: 'Publish new release 🚀'
 
 on:
   push:
     branches:
-      - alpha
-      - beta
-
-  workflow_dispatch:
+      - main
 
 concurrency:
-  group: release-${{ github.ref }}
+  group: ${{ github.workflow }}-${{ github.ref_name }}
   cancel-in-progress: true
 
 jobs:
   test:
-    runs-on: ubuntu-22.04
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./.github/actions/test
+    uses: ./.github/workflows/test.yml
+    secrets: inherit
 
   release:
-    name: 'Publish new release 🚀'
-    runs-on: ubuntu-22.04
     needs: test
+    runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
+          fetch-depth: 0
           persist-credentials: false
           token: ${{ secrets.GH_REPO_TOKEN }}
 
-      # TODO: Switch to v3 with app credentials when GitHub apps are allowed to bypass status checks. https://github.com/orgs/community/discussions/43460
+      # TODO: Switch to v3 with app credentials when GitHub apps are allowed to bypass merge queue
       - uses: myparcelnl/actions/setup-git-credentials@v2
         with:
           token: ${{ secrets.GH_REPO_TOKEN }}
 
-      - uses: actions/checkout@v3
+      - uses: myparcelnl/actions/yarn-install@v3
         with:
-          fetch-depth: 0
-          token: ${{ secrets.GH_REPO_TOKEN }}
+          node-version: ${{ vars.NODE_VERSION }}
 
-      - uses: ./.github/actions/setup
+      - uses: ./.github/actions/build
 
       - uses: actions/upload-pages-artifact@v1
         with:
           path: ./apps/demo/dist
-
-      - uses: myparcelnl/actions/bundlewatch@v3
-        with:
-          token: ${{ secrets.BUNDLEWATCH_GITHUB_TOKEN }}
 
       - name: 'Run monodeploy'
         run: |
