--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+      - alpha
+      - beta
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref_name }}
