--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
         id: coverage-cache
         with:
           path: coverage/clover.xml
-          key: coverage-${{ hashFiles('package.json', 'yarn.lock', 'tsconfig.json', 'src/**/*', 'test/**/*') }}
+          key: coverage-${{ matrix.node-version}}-${{ hashFiles('package.json', 'yarn.lock', 'tsconfig.json', 'src/**/*', 'test/**/*') }}
 
       - uses: myparcelnl/actions/yarn-install@v3
         if: steps.coverage-cache.outputs.cache-hit != 'true'
