--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -23,6 +23,7 @@
     "@myparcel/ts-utils": "^1.6.0"
   },
   "devDependencies": {
+    "@testing-library/vue": "^8.0.1",
     "@vitest/coverage-v8": "^1.0.0",
     "@vue/test-utils": "^2.3.0",
     "happy-dom": "^12.2.1",
