--- a/apps/vue-form-builder/package.json
+++ b/apps/vue-form-builder/package.json
@@ -41,7 +41,8 @@
     "@myparcel-vfb/hook-manager": "workspace:^1.0.0-beta.11",
     "@myparcel-vfb/plugin": "workspace:^1.0.0-beta.37",
     "@myparcel-vfb/utils": "workspace:^1.0.0-beta.6",
-    "@myparcel/ts-utils": "^1.6.0"
+    "@myparcel/ts-utils": "^1.6.0",
+    "@vueuse/core": "^10.1.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
