fix(npm): fix builds and exports
BREAKING CHANGE: may break imports and/or cause new build errors

--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -5,11 +5,15 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "build": "vite build",
-    "build:dev": "vite build --mode development",
-    "clean": "rimraf dist",
+    "build": "run ws:vite:build \"$(pwd)\"",
+    "build:dev": "run ws:vite:build:dev \"$(pwd)\"",
+    "clean": "run ws:clean \"$(pwd)\"",
     "serve": "vite",
-    "typecheck": "run ws:vue:typecheck \"$(pwd)\""
+    "test": "run ws:test \"$(pwd)\"",
+    "test:coverage": "run ws:test:coverage \"$(pwd)\"",
+    "test:run": "run ws:test:run \"$(pwd)\"",
+    "test:update": "run ws:test:update \"$(pwd)\"",
+    "typecheck": "run ws:vite:typecheck \"$(pwd)\""
   },
   "dependencies": {
     "@myparcel/constants": "^1.1.0",
