--- a/libs/plugin/package.json
+++ b/libs/plugin/package.json
@@ -3,16 +3,20 @@
   "version": "1.0.0-beta.39",
   "license": "MIT",
   "type": "module",
-  "exports": "./src/index.ts",
+  "exports": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
-    "./dist",
-    "./src"
+    "./dist"
   ],
   "scripts": {
-    "build": "run ws:ts:build \"$(pwd)\"",
+    "build": "run ws:vite:build \"$(pwd)\"",
+    "build:dev": "run ws:vite:build:dev \"$(pwd)\"",
     "clean": "run ws:clean \"$(pwd)\"",
-    "typecheck": "run ws:ts:typecheck \"$(pwd)\""
+    "test": "run ws:test \"$(pwd)\"",
+    "test:coverage": "run ws:test:coverage \"$(pwd)\"",
+    "test:run": "run ws:test:run \"$(pwd)\"",
+    "test:update": "run ws:test:update \"$(pwd)\"",
+    "typecheck": "run ws:vite:typecheck \"$(pwd)\""
   },
   "dependencies": {
     "@myparcel-vfb/core": "workspace:^1.0.0-beta.39",
