--- a/apps/vue-form-builder/package.json
+++ b/apps/vue-form-builder/package.json
@@ -9,40 +9,28 @@
   ],
   "license": "MIT",
   "type": "module",
-  "exports": {
-    ".": {
-      "import": {
-        "types": "./dist/index.d.ts",
-        "default": "./dist/index.js"
-      },
-      "require": {
-        "types": "./dist/index.cjs",
-        "default": "./dist/index.cjs"
-      }
-    },
-    "./ts": {
-      "types": "./dist/index.d.ts",
-      "import": "./src/index.ts"
-    }
-  },
+  "exports": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
-    "./dist",
-    "./src"
+    "./dist"
   ],
   "scripts": {
-    "build": "vite build",
-    "build:dev": "vite build --mode development",
+    "build": "run ws:vite:build \"$(pwd)\"",
+    "build:dev": "run ws:vite:build:dev \"$(pwd)\"",
     "clean": "run ws:clean \"$(pwd)\"",
-    "typecheck": "run ws:ts:typecheck \"$(pwd)\""
+    "test": "run ws:test \"$(pwd)\"",
+    "test:coverage": "run ws:test:coverage \"$(pwd)\"",
+    "test:run": "run ws:test:run \"$(pwd)\"",
+    "test:update": "run ws:test:update \"$(pwd)\"",
+    "typecheck": "run ws:vite:typecheck \"$(pwd)\""
   },
   "dependencies": {
     "@myparcel-vfb/core": "workspace:^1.0.0-beta.39",
     "@myparcel-vfb/hook-manager": "workspace:^1.0.0-beta.11",
     "@myparcel-vfb/plugin": "workspace:^1.0.0-beta.39",
     "@myparcel-vfb/utils": "workspace:^1.0.0-beta.6",
-    "@myparcel/ts-utils": "^1.6.0",
-    "@vueuse/core": "^10.1.2"
+    "@myparcel/ts-utils": ">= 1.6.0",
+    "@vueuse/core": ">= 10.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
