--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -3,19 +3,20 @@
   "version": "1.0.0-beta.39",
   "license": "MIT",
   "type": "module",
-  "exports": "./src/index.ts",
+  "exports": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
-    "./dist",
-    "./src"
+    "./dist"
   ],
   "scripts": {
-    "build": "run ws:vue:build \"$(pwd)\"",
+    "build": "run ws:vite:build \"$(pwd)\"",
+    "build:dev": "run ws:vite:build:dev \"$(pwd)\"",
     "clean": "run ws:clean \"$(pwd)\"",
     "test": "run ws:test \"$(pwd)\"",
     "test:coverage": "run ws:test:coverage \"$(pwd)\"",
     "test:run": "run ws:test:run \"$(pwd)\"",
-    "typecheck": "run ws:vue:typecheck \"$(pwd)\""
+    "test:update": "run ws:test:update \"$(pwd)\"",
+    "typecheck": "run ws:vite:typecheck \"$(pwd)\""
   },
   "dependencies": {
     "@myparcel-vfb/hook-manager": "workspace:^1.0.0-beta.11",
@@ -23,6 +24,7 @@
     "@myparcel/ts-utils": "^1.6.0"
   },
   "devDependencies": {
+    "@myparcel-vfb/build-vite": "workspace:*",
     "@testing-library/vue": "^8.0.1",
     "@vitest/coverage-v8": "^1.0.0",
     "@vue/test-utils": "^2.3.0",
