--- a/libs/hook-manager/package.json
+++ b/libs/hook-manager/package.json
@@ -3,25 +3,26 @@
   "version": "1.0.0-beta.11",
   "license": "MIT",
   "type": "module",
-  "exports": "./src/index.ts",
+  "exports": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
-    "./dist",
-    "./src"
+    "./dist"
   ],
   "scripts": {
-    "build": "run ws:ts:build \"$(pwd)\"",
-    "build:dev": "run ws:ts:build \"$(pwd)\"",
+    "build": "run ws:vite:build \"$(pwd)\"",
+    "build:dev": "run ws:vite:build:dev \"$(pwd)\"",
     "clean": "run ws:clean \"$(pwd)\"",
     "test": "run ws:test \"$(pwd)\"",
     "test:coverage": "run ws:test:coverage \"$(pwd)\"",
     "test:run": "run ws:test:run \"$(pwd)\"",
-    "typecheck": "run ws:ts:typecheck \"$(pwd)\""
+    "test:update": "run ws:test:update \"$(pwd)\"",
+    "typecheck": "run ws:vite:typecheck \"$(pwd)\""
   },
   "dependencies": {
     "@myparcel/ts-utils": "^1.6.0"
   },
   "devDependencies": {
+    "@myparcel-vfb/build-vite": "workspace:*",
     "@vitest/coverage-v8": "^1.0.0",
     "typescript": "^5.0.0",
     "vitest": "^1.0.0"
