--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -16,6 +16,7 @@
     "typecheck": "run ws:vite:typecheck \"$(pwd)\""
   },
   "dependencies": {
+    "@myparcel-vfb/utils": "workspace:*",
     "@myparcel/constants": "^2.0.0",
     "@myparcel/sdk": "^4.0.0",
     "@myparcel/ts-utils": "^1.6.0",
