--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -26,12 +26,16 @@
   "devDependencies": {
     "@myparcel-vfb/build-vite": "workspace:*",
     "@testing-library/vue": "^8.0.1",
+    "@vitejs/plugin-vue": "^5.0.0",
     "@vitest/coverage-v8": "^2.0.0",
     "@vue/test-utils": "^2.3.0",
-    "happy-dom": "^12.2.1",
+    "happy-dom": "^13.0.0",
     "typescript": "^5.0.0",
+    "vite": "^5.0.0",
+    "vite-plugin-custom-tsconfig": "^1.0.4",
+    "vite-plugin-dts": "^3.0.0",
     "vitest": "^2.0.0",
-    "vue": "^3.2.47",
+    "vue": "^3.3.0",
     "vue-tsc": "^2.0.0"
   },
   "publishConfig": {
