--- a/libs/plugin/package.json
+++ b/libs/plugin/package.json
@@ -24,9 +24,17 @@
     "@vue/devtools-api": "^6.5.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-vue": "^5.0.0",
     "@vitest/coverage-v8": "^2.0.0",
     "@vueuse/core": "^10.1.2",
-    "typescript": "^5.0.0"
+    "happy-dom": "^13.0.0",
+    "typescript": "^5.0.0",
+    "vite": "^5.0.0",
+    "vite-plugin-custom-tsconfig": "^1.0.4",
+    "vite-plugin-dts": "^3.0.0",
+    "vitest": "^2.0.0",
+    "vue": "^3.3.0",
+    "vue-tsc": "^2.0.0"
   },
   "publishConfig": {
     "access": "public"
