--- a/libs/utils/package.json
+++ b/libs/utils/package.json
@@ -22,7 +22,16 @@
     "@myparcel/ts-utils": "^1.6.0"
   },
   "devDependencies": {
-    "typescript": "^5.0.0"
+    "@vitejs/plugin-vue": "^5.0.0",
+    "@vitest/coverage-v8": "^2.0.0",
+    "happy-dom": "^13.0.0",
+    "typescript": "^5.0.0",
+    "vite": "^5.0.0",
+    "vite-plugin-custom-tsconfig": "^1.0.4",
+    "vite-plugin-dts": "^3.0.0",
+    "vitest": "^2.0.0",
+    "vue": "^3.3.0",
+    "vue-tsc": "^2.0.0"
   },
   "publishConfig": {
     "access": "public"
