--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -2,12 +2,12 @@ checksumBehavior: ignore
 
 compressionLevel: 0
 
-enableGlobalCache: false
+enableGlobalCache: true
+
+ignorePath: true
 
 nodeLinker: node-modules
 
 npmRegistries:
   //registry.npmjs.org/:
     npmAuthToken: "${NPM_TOKEN:-invalid}"
-
-yarnPath: .yarn/releases/yarn-4.3.1.cjs
