--- a/package.json
+++ b/package.json
@@ -72,12 +72,12 @@
     "rimraf": "^6.0.0",
     "vitest": "^2.0.0"
   },
-  "packageManager": "yarn@4.3.1",
   "engines": {
     "node": ">=18.0.0"
   },
   "volta": {
-    "node": "20.15.1"
+    "node": "20.15.1",
+    "yarn": "4.3.1"
   },
   "bundlewatch": {
     "ci": {
