--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-22.04
     strategy:
       matrix:
-        node-version: [18, 20]
+        node-version: [18, 'current']
     steps:
       - uses: actions/checkout@v4
 
@@ -18,10 +18,13 @@ jobs:
         id: coverage-cache
         with:
           path: coverage/clover.xml
-          key: coverage-${{ matrix.node-version}}-${{ hashFiles('package.json', 'yarn.lock', 'tsconfig.json', 'src/**/*', 'test/**/*') }}
+          key: coverage-${{ matrix.node-version }}-${{ hashFiles('package.json', 'yarn.lock', 'tsconfig.json', 'src/**/*', 'test/**/*') }}
 
-      - uses: myparcelnl/actions/yarn-install@v3
-        if: steps.coverage-cache.outputs.cache-hit != 'true'
+      - uses: myparcelnl/actions/yarn-install@v4
+        if: matrix.node-version == 'current' && steps.coverage-cache.outputs.cache-hit != 'true'
+
+      - uses: myparcelnl/actions/yarn-install@v4
+        if: matrix.node-version != 'current' && steps.coverage-cache.outputs.cache-hit != 'true'
         with:
           node-version: ${{ matrix.node-version }}
 
@@ -35,7 +38,7 @@ jobs:
             --output-style=static
 
       - uses: codecov/codecov-action@v3
-        if: matrix.node-version == vars.NODE_VERSION
+        if: matrix.node-version == 'current'
         with:
           files: coverage/clover.xml
           token: ${{ secrets.CODECOV_TOKEN }}
