--- a/libs/build-vite/package.json
+++ b/libs/build-vite/package.json
@@ -12,6 +12,7 @@
   "exports": "./index.js",
   "types": "./index.d.ts",
   "devDependencies": {
+    "@codecov/vite-plugin": "^0.0.1-beta.10",
     "@myparcel/ts-utils": "^1.9.0",
     "@vitejs/plugin-vue": "^5.0.0",
     "@vitest/coverage-v8": "^2.0.0",
