--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -27,6 +27,7 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@testing-library/user-event": "^14.5.2",
     "@vitejs/plugin-vue": "^5.0.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
