build(nx): include dist in test cache

--- a/nx.json
+++ b/nx.json
@@ -23,6 +23,7 @@
     ],
     "test": [
       "default",
+      "{projectRoot}/dist/**/*",
       "{projectRoot}/**/*.spec.*",
       "{projectRoot}/**/__tests__/**",
       "{projectRoot}/**/__mocks__/**",
