build: test arm runners

--- a/.github/workflows/pull-request-open.yml
+++ b/.github/workflows/pull-request-open.yml
@@ -11,7 +11,7 @@ concurrency:
 
 jobs:
   assign-author:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-arm
     steps:
       - uses: myparcelnl/actions/pr-assign-author@v4
         with:
