--- a/.github/workflows/pull-request-review.yml
+++ b/.github/workflows/pull-request-review.yml
@@ -9,7 +9,7 @@ concurrency:
 
 jobs:
   label:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-arm
     steps:
       - uses: myparcelnl/actions/pr-label-by-review@v4
         with:
