--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -18,7 +18,7 @@ jobs:
 
   release:
     needs: test
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-arm
     steps:
       - uses: actions/checkout@v4
         with:
@@ -54,7 +54,7 @@ jobs:
 
   rebase-prs:
     needs: release
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-arm
     steps:
       - uses: myparcelnl/actions/rebase-prs@v4
         with:
@@ -66,7 +66,7 @@ jobs:
 
   deploy:
     needs: release
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-arm
     permissions:
       pages: write
       id-token: write
