--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   test:
     name: 'Run unit tests'
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-arm
     strategy:
       matrix:
         node-version: [18, 'current']
@@ -50,7 +50,7 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
 
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-arm
     steps:
       - uses: actions/checkout@v4
 
