--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,9 @@ jobs:
       - uses: myparcelnl/actions/nx-run-many@v4
         with:
           target: 'test:coverage'
-          args: '--parallel=false'
+          args: |
+            --runner=cloud
+            --parallel=false
 
       - name: 'Move coverage files'
         if: matrix.node-version == 'current'
