--- a/apps/vue-form-builder/package.json
+++ b/apps/vue-form-builder/package.json
@@ -30,8 +30,10 @@
     "vue-component-type-helpers": "^2.1.6"
   },
   "devDependencies": {
+    "@testing-library/vue": "^8.0.0",
     "@vitejs/plugin-vue": "^5.0.0",
     "@vitest/coverage-v8": "^2.0.0",
+    "@vue/test-utils": "^2.4.0",
     "typescript": "^5.0.0",
     "vite": "^5.0.0",
     "vite-plugin-custom-tsconfig": "^1.0.4",
