ci: improve workflows

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -20,20 +20,16 @@ jobs:
     needs: test
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v4
+      - uses: myparcelnl/actions/setup-git-credentials@v4
+        id: credentials
         with:
-          persist-credentials: false
-          token: ${{ secrets.GH_REPO_TOKEN }}
-
-      # TODO: Switch to v3 with app credentials when GitHub apps are allowed to bypass status checks. https://github.com/orgs/community/discussions/43460
-      - uses: myparcelnl/actions/setup-git-credentials@v2
-        with:
-          token: ${{ secrets.GH_REPO_TOKEN }}
+          app-id: ${{ inputs.app-id }}
+          private-key: ${{ inputs.private-key }}
 
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          token: ${{ secrets.GH_REPO_TOKEN }}
+          token: ${{ steps.credentials.outputs.token }}
 
       - uses: myparcelnl/actions/yarn-install@v4
 
@@ -44,13 +40,14 @@ jobs:
           path: ./apps/demo/dist
 
       - name: 'Run monodeploy'
+        env:
+          GH_TOKEN: ${{ steps.credentials.outputs.token }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        #language=bash
         run: |
           yarn monodeploy \
             --config-file monodeploy.config.cjs \
             --log-level 0
-        env:
-          GH_TOKEN: ${{ secrets.GH_REPO_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
   rebase-prs:
     needs: release
