--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -23,8 +23,8 @@ jobs:
       - uses: myparcelnl/actions/setup-git-credentials@v4
         id: credentials
         with:
-          app-id: ${{ inputs.app-id }}
-          private-key: ${{ inputs.private-key }}
+          app-id: ${{ secrets.MYPARCEL_APP_ID }}
+          private-key: ${{ secrets.MYPARCEL_APP_PRIVATE_KEY }}
 
       - uses: actions/checkout@v4
         with:
